--- a/peacebreak/update-payment.html
+++ b/peacebreak/update-payment.html
@@ -193,7 +193,7 @@
       <h1>Update Payment Method</h1>
       <div class="desc">Enter your new card details below to update your payment method for PeaceBreak. Your information is securely processed by Square.</div>
       <div class="security-info">
-        <img src="https://developer.squareup.com/images/logos/lock.svg" alt="Secured by Square" class="square-badge" />
+        <img src="./assets/images/square_logo.png" alt="Secured by Square" class="square-badge" />
         <span>Payments are encrypted and PCI DSS compliant via Square.</span>
       </div>
       <div id="card-container"></div>
