--- a/peacebreak/update-payment.html
+++ b/peacebreak/update-payment.html
@@ -1,279 +1,292 @@
-<!--
-  PeaceBreak Update Payment Page
-  Usage: Open this page in a WebView for users to update their payment method securely.
-  - On success, this page will call window.ReactNativeWebView.postMessage('success')
-  - You must set your Square Application ID and Location ID below.
-  - This page is production-ready and safe for public deployment.
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Update Payment Method – PeaceBreak</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PeaceBreak – Update Payment Details</title>
   <meta name="color-scheme" content="light dark">
-  <script>
-    // ---- CONFIGURATION ----
-    // Set your credentials here
-    const SQUARE_CONFIG = {
-      sandbox: {
-        script: 'https://sandbox.web.squarecdn.com/v1/square.js',
-        appId: 'sandbox-sq0idb-Dfm_eh4V58DLUu-esACSig', // <-- your sandbox App ID
-        locationId: 'LG4QHA89Q3MPE', // <-- your sandbox Location ID
-      },
-      production: {
-        script: 'https://web.squarecdn.com/v1/square.js',
-        appId: 'REPLACE_WITH_YOUR_PRODUCTION_APP_ID', // <-- your production App ID
-        locationId: 'REPLACE_WITH_YOUR_PRODUCTION_LOCATION_ID', // <-- your production Location ID
-      }
-    };
-    // Parse env from URL (?env=sandbox or ?env=production)
-    const urlParams = new URLSearchParams(window.location.search);
-    const env = urlParams.get('env') === 'sandbox' ? 'sandbox' : 'production';
-    const { script: SQUARE_SCRIPT_SRC, appId: SQUARE_APP_ID, locationId: SQUARE_LOCATION_ID } = SQUARE_CONFIG[env];
-    // Dynamically load the correct Square script
-    document.write(`<script src='${SQUARE_SCRIPT_SRC}'><\/script>`);
-  </script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --primary: #4FC3F7;
+      --primary: #4FC3F7;      /* Blue accent */
       --accent: #FF8C32;
       --bg: #181C24;
       --card-bg: #23293A;
       --text: #fff;
       --error: #ff4d4f;
-      --success: #4CAF50;
-      --radius: 18px;
-      --shadow: 0 4px 24px rgba(0,0,0,0.18);
+      --success: #4CAF50;     /* Green used for button & lock background */
+      --radius: 16px;
+      --shadow: 0 4px 20px rgba(0,0,0,0.2);
     }
-    html, body {
-      height: 100%;
+    * {
+      box-sizing: border-box;
+    }
+    body {
       margin: 0;
       padding: 0;
       background: var(--bg);
+      font-family: 'Inter', sans-serif;
       color: var(--text);
-      font-family: 'Inter', 'Segoe UI', Arial, sans-serif;
-      min-height: 100vh;
     }
+    /* Page container */
     .container {
-      min-height: 100vh;
       display: flex;
+      flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
+      min-height: 100vh;
+      padding: 2rem 1.5rem;
       background: linear-gradient(135deg, #23293A 0%, #181C24 100%);
     }
+    /* Large company heading */
+    .brand-heading {
+      font-size: 2.8rem;
+      font-weight: 800;
+      margin-bottom: 1rem;
+      text-align: center;
+      color: var(--primary);
+      letter-spacing: 1px;
+    }
+    .brand-heading span.dove {
+      font-size: 2.8rem;
+      margin-left: 0.5rem;
+    }
+    /* Subtitle under brand if desired (optional) */
+    /* .brand-subtitle { 
+      color: #b0c4d4; 
+      font-size: 1rem; 
+      margin-bottom: 2rem; 
+      text-align: center; 
+    } */
+
     .card {
       background: var(--card-bg);
       border-radius: var(--radius);
       box-shadow: var(--shadow);
-      padding: 2.5rem 2rem 2rem 2rem;
-      max-width: 370px;
+      padding: 2rem;
       width: 100%;
+      max-width: 400px;
       display: flex;
       flex-direction: column;
-      align-items: center;
-      animation: fadeIn 0.7s;
+      gap: 1rem;
+      animation: fadeIn 0.6s ease-out;
+      margin-top: 1rem;
     }
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(30px);}
-      to { opacity: 1; transform: translateY(0);}
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
-    .logo {
-      width: 54px;
-      height: 54px;
-      border-radius: 50%;
-      background: var(--primary);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-bottom: 1.2rem;
-      font-size: 2.2rem;
-      color: #fff;
-      font-weight: bold;
-      box-shadow: 0 2px 8px rgba(79,195,247,0.18);
-      letter-spacing: 1px;
-    }
-    h1 {
+    /* Section Title */
+    .section-title {
       font-size: 1.5rem;
       font-weight: 700;
-      margin: 0 0 0.5rem 0;
-      letter-spacing: 0.5px;
+      margin: 0;
+      text-align: center;
       color: var(--primary);
-      text-align: center;
     }
-    .desc {
-      color: #b0c4d4;
+    .section-subtitle {
       font-size: 1rem;
-      margin-bottom: 1.2rem;
-      text-align: center;
-    }
-    .security-info {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      background: none;
-      margin-bottom: 1.1rem;
-      width: 100%;
-    }
-    .square-logo-wrap {
-      background: #fff;
-      border-radius: 12px;
-      padding: 8px 18px;
-      margin-bottom: 0.3rem;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.10);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    .square-badge {
-      height: 36px;
-      width: auto;
-      display: block;
-    }
-    .security-text {
       color: #b0c4d4;
-      font-size: 0.98rem;
       text-align: center;
-      margin-bottom: 0.2rem;
+      margin-bottom: 1.5rem;
     }
     #card-container {
       width: 100%;
-      margin-bottom: 0.7rem;
     }
+    .status {
+      min-height: 1.2em;
+      text-align: center;
+      font-weight: 500;
+    }
+    .error { color: var(--error); }
+    .success { color: var(--success); }
+
+    /* Green “Update” button with white text */
     .btn {
-      width: 100%;
-      padding: 0.95rem 0;
-      background: var(--primary);
-      color: #fff;
-      font-size: 1.1rem;
-      font-weight: 600;
+      background: var(--success);
+      color: white;
+      padding: 0.9rem;
       border: none;
       border-radius: var(--radius);
+      font-weight: 600;
       cursor: pointer;
-      transition: background 0.18s;
-      margin-bottom: 0.7rem;
-      box-shadow: 0 2px 8px rgba(79,195,247,0.10);
-      letter-spacing: 0.5px;
-    }
-    .btn:active {
-      background: #1976d2;
-    }
-    .error, .success {
-      width: 100%;
-      text-align: center;
-      margin-bottom: 0.5rem;
       font-size: 1rem;
-      font-weight: 500;
-      min-height: 1.2em;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: background 0.3s ease;
     }
-    .error { color: var(--error);}
-    .success { color: var(--success);}
-    .powered {
-      margin-top: 0.7rem;
-      font-size: 0.85rem;
+    .btn:hover {
+      background: #43a047; /* slightly darker green */
+    }
+    .btn svg {
+      width: 20px;
+      height: 20px;
+      margin-right: 0.5rem;
+      fill: white; /* white lock icon next to “Update” */
+    }
+
+    .footer-text {
+      font-size: 0.9rem;
       color: #b0c4d4;
       text-align: center;
-      opacity: 0.7;
+      margin-top: 0.8rem;
+      line-height: 1.3;
     }
-    @media (max-width: 480px) {
-      .card { padding: 1.2rem 0.5rem 1.5rem 0.5rem; }
-      .square-logo-wrap { padding: 6px 10px; }
-      .square-badge { height: 28px; }
+    .badges-footer {
+      display: flex;
+      gap: 1rem;
+      justify-content: center;
+      margin-top: 0.6rem;
+      flex-wrap: wrap;
     }
-    .close-btn {
-      position: absolute;
-      top: 18px;
-      right: 18px;
-      background: none;
-      border: none;
-      color: #b0c4d4;
-      font-size: 2rem;
-      font-weight: bold;
-      cursor: pointer;
-      z-index: 10;
-      transition: color 0.2s;
+    .badge {
+      background: white;
+      border-radius: 10px;
+      padding: 6px 14px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
-    .close-btn:hover { color: #FF8C32; }
+    /* Square logo remains the same at 40px height */
+    .badge img.square-logo {
+      height: 40px;
+      width: auto;
+      display: block;
+    }
+    /* Lock badge: green background, black lock icon */
+    .badge-lock {
+      background: var(--success);
+    }
+    .badge-lock svg {
+      width: 32px;
+      height: 32px;
+      display: block;
+      fill: #000;  /* black lock icon */
+    }
   </style>
 </head>
 <body>
   <div class="container">
-    <form class="card" id="payment-form" autocomplete="off" onsubmit="return false;">
-      <div class="logo" aria-label="PeaceBreak">🕊️</div>
-      <h1>Update Payment Method</h1>
-      <div class="desc">Enter your new card details below to update your payment method for PeaceBreak. Your information is securely processed by Square.</div>
-      <div class="security-info">
-        <div class="square-logo-wrap">
-          <img src="./assets/images/square_logo.png" alt="Secured by Square" class="square-badge" />
-        </div>
-        <span class="security-text">Payments are encrypted and PCI DSS compliant via Square.</span>
+    <!-- Large Company Name Heading -->
+    <div class="brand-heading">
+      PeaceBreak<span class="dove">🕊️</span>
+    </div>
+    <!-- (Optional subtitle) -->
+    <!-- <div class="brand-subtitle">Your daily reminder to pause and reset.</div> -->
+
+    <!-- Card container -->
+    <form class="card" id="payment-form" onsubmit="return false;">
+      <!-- Section Title -->
+      <h2 class="section-title">Update Payment Details</h2>
+      <div class="section-subtitle">
+        Securely update your card details for uninterrupted access to PeaceBreak premium features.
       </div>
+
       <div id="card-container"></div>
-      <div class="error" id="error"></div>
-      <div class="success" id="success"></div>
-      <button class="btn" id="update-btn" type="submit">Update Card</button>
-      <div class="powered">Payments securely processed by <b>Square</b></div>
+
+      <div class="status error" id="error"></div>
+      <div class="status success" id="success"></div>
+
+      <!-- Green “Update” button with white lock icon (text: “Update”) -->
+      <button class="btn" id="update-btn" type="submit">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <path d="M12 17a2 2 0 110-4 2 2 0 010 4zm6-7h-1V7a5 5 0 00-10 0v3H6a2 2 0 00-2 2v8a2 2 0 002 2h12a2 2 0 002-2v-8a2 2 0 00-2-2zm-8-3a3 3 0 016 0v3H10V7zm8 13H6v-8h12v8z"/>
+        </svg>
+        Update
+      </button>
+
+      <!-- Footer text with SSL/Encrypted note -->
+      <div class="footer-text">
+        Processed securely by <strong>Square</strong>. SSL Encrypted.
+      </div>
+
+      <!-- Badges below that text -->
+      <div class="badges-footer">
+        <!-- 1) Square logo (local PNG) -->
+        <div class="badge">
+          <img src="./assets/images/square_logo.png" alt="Square" class="square-logo" />
+        </div>
+        <!-- 2) Lock badge with green background and black lock icon -->
+        <div class="badge badge-lock">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M12 17a2 2 0 110-4 2 2 0 010 4zm6-7h-1V7a5 5 0 00-10 0v3H6a2 2 0 00-2 2v8a2 2 0 002 2h12a2 2 0 002-2v-8a2 2 0 00-2-2zm-8-3a3 3 0 016 0v3H10V7zm8 13H6v-8h12v8z"/>
+          </svg>
+        </div>
+      </div>
     </form>
   </div>
-  <script>
-    // Wait for Square.js to be loaded
-    function onSquareReady(cb) {
-      if (window.Square) cb();
-      else setTimeout(() => onSquareReady(cb), 50);
-    }
-    let card;
-    let form = document.getElementById('payment-form');
-    let errorDiv = document.getElementById('error');
-    let successDiv = document.getElementById('success');
-    let updateBtn = document.getElementById('update-btn');
 
-    onSquareReady(async function initializeSquare() {
-      try {
-        const payments = window.Square.payments(SQUARE_APP_ID, SQUARE_LOCATION_ID);
+  <!-- Load Square Script Dynamically -->
+  <script>
+    const config = {
+      sandbox: {
+        script: 'https://sandbox.web.squarecdn.com/v1/square.js',
+        appId: 'sandbox-sq0idb-Dfm_eh4V58DLUu-esACSig',
+        locationId: 'LG4QHA89Q3MPE',
+      },
+      production: {
+        script: 'https://web.squarecdn.com/v1/square.js',
+        appId: 'REPLACE_WITH_YOUR_PRODUCTION_APP_ID',
+        locationId: 'REPLACE_WITH_YOUR_PRODUCTION_LOCATION_ID',
+      }
+    };
+    const env = new URLSearchParams(window.location.search).get('env') === 'sandbox' ? 'sandbox' : 'production';
+    const { script, appId, locationId } = config[env];
+    document.write(`<script src="${script}"><\/script>`);
+
+    let card;
+    window.onload = () => {
+      function waitForSquare(cb) {
+        if (window.Square) cb();
+        else setTimeout(() => waitForSquare(cb), 50);
+      }
+      waitForSquare(async () => {
+        const payments = window.Square.payments(appId, locationId);
         card = await payments.card();
         await card.attach('#card-container');
-      } catch (e) {
-        errorDiv.textContent = 'Failed to initialize payment form. Please try again later.';
-        updateBtn.disabled = true;
-      }
-    });
+      });
 
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      errorDiv.textContent = '';
-      successDiv.textContent = '';
-      updateBtn.disabled = true;
-      updateBtn.textContent = 'Processing...';
-      try {
-        const result = await card.tokenize();
-        if (result.status === 'OK') {
-          successDiv.textContent = 'Card updated!';
-          // Send token to React Native WebView
-          if (window.ReactNativeWebView && window.ReactNativeWebView.postMessage) {
-            window.ReactNativeWebView.postMessage(result.token);
-            setTimeout(() => {
-              window.ReactNativeWebView.postMessage('success');
-            }, 800);
+      document.getElementById('payment-form').addEventListener('submit', async e => {
+        e.preventDefault();
+        const errorEl = document.getElementById('error');
+        const successEl = document.getElementById('success');
+        const btn = document.getElementById('update-btn');
+
+        // Clear any previous messages
+        errorEl.textContent = '';
+        successEl.textContent = '';
+
+        // Disable button while processing
+        btn.disabled = true;
+        btn.textContent = 'Processing...';
+
+        try {
+          const result = await card.tokenize();
+          if (result.status === 'OK') {
+            successEl.textContent = 'Card updated successfully.';
+            if (window.ReactNativeWebView?.postMessage) {
+              window.ReactNativeWebView.postMessage(result.token);
+              setTimeout(() => window.ReactNativeWebView.postMessage('success'), 800);
+            }
           } else {
-            successDiv.textContent = 'Card token: ' + result.token;
+            errorEl.textContent = result.errors?.[0]?.message || 'Failed to tokenize card.';
           }
-        } else {
-          errorDiv.textContent = (result.errors && result.errors[0] && result.errors[0].message) || 'Failed to tokenize card.';
+        } catch (err) {
+          errorEl.textContent = err.message || 'Unexpected error occurred.';
         }
-      } catch (err) {
-        errorDiv.textContent = err.message || 'Failed to update card.';
-      }
-      updateBtn.disabled = false;
-      updateBtn.textContent = 'Update Card';
-    });
 
-    // Accessibility: focus on card input after load
-    window.onload = () => {
-      setTimeout(() => {
-        const cardInput = document.querySelector('iframe');
-        if (cardInput) cardInput.focus();
-      }, 800);
+        // Re-enable button and restore “Update” label + lock icon
+        btn.disabled = false;
+        btn.innerHTML = `
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" style="width:20px;height:20px;fill:white;margin-right:0.5rem;">
+            <path d="M12 17a2 2 0 110-4 2 2 0 010 4zm6-7h-1V7a5 5 0 00-10 0v3H6a2 2 0 00-2 2v8a2 2 0 002 2h12a2 2 0 002-2v-8a2 2 0 00-2-2zm-8-3a3 3 0 016 0v3H10V7zm8 13H6v-8h12v8z"/>
+          </svg>
+          Update
+        `;
+      });
     };
   </script>
 </body>
-</html> 
+</html>
