--- a/peacebreak/update-payment.html
+++ b/peacebreak/update-payment.html
@@ -181,7 +181,7 @@
       <!-- Section Title -->
       <h2 class="section-title">Update Payment Details</h2>
       <div class="section-subtitle">
-        Securely update your card details for uninterrupted access to PeaceBreak premium features.
+        Update your card details for uninterrupted access to all PeaceBreak tracks and features. Thank you for supporting our small, family-run app that brings peace to thousands.
       </div>
 
       <div id="card-container"></div>
