--- a/peacebreak/square-webview.html
+++ b/peacebreak/square-webview.html
@@ -213,7 +213,7 @@
 
       <!-- Updated Subtitle Text -->
       <div class="section-subtitle">
-			<p>Enjoy every PeaceBreak feature and peaceful tracks for less than the cost of a coffee per month&mdash;no ads ever, no hidden fees, one simple plan. Cancel anytime.</p>
+	<p>Enjoy every PeaceBreak feature and peaceful track for less than the cost of a coffee per month—no ads ever, no hidden fees, one simple plan. Cancel anytime. Thank you for supporting our small, family-run app that brings peace to thousands.</p>
         <p>Your payment information is securely processed by Square.</p>
       </div>
 
