--- a/peacebreak/update-payment.html
+++ b/peacebreak/update-payment.html
@@ -101,7 +101,7 @@
     .error { color: var(--error); }
     .success { color: var(--success); }
 
-    /* Green “Update” button with white text */
+    /* Green "Update" button with white text */
     .btn {
       background: var(--success);
       color: white;
@@ -123,7 +123,7 @@
       width: 20px;
       height: 20px;
       margin-right: 0.5rem;
-      fill: white; /* white lock icon next to “Update” */
+      fill: white; /* white lock icon next to "Update" */
     }
 
     .footer-text {
@@ -165,6 +165,20 @@
       display: block;
       fill: #000;  /* black lock icon */
     }
+
+    /* Make Square card input and placeholder text white for dark backgrounds */
+    #card-container iframe {
+      color-scheme: dark;
+    }
+    #card-container iframe::placeholder {
+      color: #fff !important;
+      opacity: 1 !important;
+    }
+    /* For some Square themes, input fields may need to be forced white */
+    #card-container input, #card-container input::placeholder {
+      color: #fff !important;
+      opacity: 1 !important;
+    }
   </style>
 </head>
 <body>
@@ -189,7 +203,7 @@
       <div class="status error" id="error"></div>
       <div class="status success" id="success"></div>
 
-      <!-- Green “Update” button with white lock icon (text: “Update”) -->
+      <!-- Green "Update" button with white lock icon (text: "Update") -->
       <button class="btn" id="update-btn" type="submit">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
           <path d="M12 17a2 2 0 110-4 2 2 0 010 4zm6-7h-1V7a5 5 0 00-10 0v3H6a2 2 0 00-2 2v8a2 2 0 002 2h12a2 2 0 002-2v-8a2 2 0 00-2-2zm-8-3a3 3 0 016 0v3H10V7zm8 13H6v-8h12v8z"/>
@@ -277,7 +291,7 @@
           errorEl.textContent = err.message || 'Unexpected error occurred.';
         }
 
-        // Re-enable button and restore “Update” label + lock icon
+        // Re-enable button and restore "Update" label + lock icon
         btn.disabled = false;
         btn.innerHTML = `
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" style="width:20px;height:20px;fill:white;margin-right:0.5rem;">
