--- a/index.html
+++ b/index.html
@@ -6,18 +6,84 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Thamizhi Studios</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <style>
-    body { margin: 0; font-family: 'Inter', sans-serif; background: #f9f9f9; color: #333; }
-    header { background: #fff; padding: 1rem 2rem; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 5px rgba(0,0,0,0.05); }
-    header nav a { margin-left: 1.5rem; text-decoration: none; color: #6f42c1; font-weight: 600; }
-    .hero { text-align: center; padding: 4rem 2rem; background: #ede7f6; }
-    .hero h1 { font-size: 3em; color: #4b0082; }
-    .hero p { font-size: 1.2em; max-width: 700px; margin: 1rem auto 2rem; }
-    .hero a { background: #6f42c1; color: #fff; padding: 0.8rem 1.5rem; border-radius: 5px; text-decoration: none; font-weight: 600; }
-    section { padding: 4rem 2rem; text-align: center; }
-    .card { background: #fff; max-width: 700px; margin: 2rem auto; padding: 2rem; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
-    footer { text-align: center; padding: 2rem; font-size: 0.9em; background: #eee; }
-  </style>
+<style>
+  body {
+    margin: 0;
+    font-family: 'Inter', sans-serif;
+    background: #1e1c26; /* deep twilight */
+    color: #e0e0e0;
+  }
+
+  header {
+    background: #2a2735;
+    padding: 1rem 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+  }
+
+  header nav a {
+    margin-left: 1.5rem;
+    text-decoration: none;
+    color: #b89bff; /* softened version of #6f42c1 */
+    font-weight: 600;
+  }
+
+  .hero {
+    text-align: center;
+    padding: 4rem 2rem;
+    background: #332f44; /* soft purple-gray */
+  }
+
+  .hero h1 {
+    font-size: 3em;
+    color: #dabaff;
+  }
+
+  .hero p {
+    font-size: 1.2em;
+    max-width: 700px;
+    margin: 1rem auto 2rem;
+    color: #d0cde1;
+  }
+
+  .hero a {
+    background: #6f42c1;
+    color: #fff;
+    padding: 0.8rem 1.5rem;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: 600;
+  }
+
+  section {
+    padding: 4rem 2rem;
+    text-align: center;
+  }
+
+  .card {
+    background: #2f2c3a;
+    max-width: 700px;
+    margin: 2rem auto;
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+  }
+
+  h2 {
+    color: #cabdff;
+  }
+
+  footer {
+    text-align: center;
+    padding: 2rem;
+    font-size: 0.9em;
+    background: #25232e;
+    color: #aaa;
+  }
+</style>
+
 </head>
 <body>
   <header>
