--- a/peacebreak/index.html
+++ b/peacebreak/index.html
@@ -45,16 +45,21 @@
   .logo img {
     width: 40px;
     height: 40px;
+    border-radius: 50%;
     object-fit: cover;
     filter: brightness(0) invert(1);
+    background: transparent;
+    border: none;
+    outline: none;
+    box-shadow: none;
   }
 
-  .logo-text {
-    font-family: 'Lavishly Yours', cursive;
-    font-size: 1.8rem;
-    color: #78A5A3;
-    font-weight: 400;
-  }
+	.logo-text {
+		font-family: 'Lavishly Yours', cursive;
+		font-size: 3.5rem;
+		color: #f7f7f7;
+		font-weight: 400;
+	}
 
   header nav a {
     margin-left: 1.5rem;
