--- a/peacebreak/paymentthankyou.html
+++ b/peacebreak/paymentthankyou.html
@@ -53,17 +53,21 @@
     .logo img {
       width: 60px;
       height: 60px;
+      border-radius: 50%;
       object-fit: cover;
       filter: brightness(0) invert(1);
+      background: transparent;
+      border: none;
+      outline: none;
+      box-shadow: none;
     }
 
     .logo-text {
-      font-family: 'Lavishly Yours', cursive;
-      font-size: 2.5rem;
-      color: #78A5A3;
-      font-weight: 400;
-    }
-
+		font-family: 'Lavishly Yours', cursive;
+		font-size: 3.5rem;
+		color: #f7f7f7;
+		font-weight: 400;
+	}
     h1 {
       font-size: 2.8rem;
       color: #78A5A3;
